objects/Tour_and_Tasting_Request__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Value is populated based on a field update workflow tied to the approval process</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Winery Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approving_Rep_Email__c</fullName>
        <label>Approving Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_Code__c</fullName>
        <inlineHelpText>Please enter the object account code</inlineHelpText>
        <label>Billing Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cases_Purchased_Winery__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of cases of wine purchased from this winery</description>
        <inlineHelpText>Enter the number of cases of wine purchased from the winery</inlineHelpText>
        <label>Cases Purchased Winery</label>
        <precision>12</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cases_Purchased__c</fullName>
        <description>Number of Cases Purchased Over Last Rolling 12 Months</description>
        <inlineHelpText>Enter the number of case purchased by this person over the last rolling 12 months</inlineHelpText>
        <label>Cases Purchased</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check_in_Date__c</fullName>
        <description>Date that the Guest will be checking in for their Tour and Tasting lodging.</description>
        <label>Check-in Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_out_Date__c</fullName>
        <description>Date that the Guest will be checking out of their Tour and Tasting lodging.</description>
        <label>Check-out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmed_Date_of_Visit__c</fullName>
        <description>Field is only populated by the winery and/or Leah/Carla</description>
        <label>Confirmed Date of Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmed_Time_of_Visit__c</fullName>
        <label>Confirmed Time of Visit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>8:00 AM PDT</fullName>
                </value>
                <value>
                    <fullName>8:30 AM PDT</fullName>
                </value>
                <value>
                    <fullName>9:00 AM PDT</fullName>
                </value>
                <value>
                    <fullName>9:30 AM PDT</fullName>
                </value>
                <value>
                    <fullName>10:00 AM PDT</fullName>
                </value>
                <value>
                    <fullName>10:30 AM PDT</fullName>
                </value>
                <value>
                    <fullName>11:00 AM PDT</fullName>
                </value>
                <value>
                    <fullName>11:30 AM PDT</fullName>
                </value>
                <value>
                    <fullName>12:00 PM PDT</fullName>
                </value>
                <value>
                    <fullName>12:30 PM PDT</fullName>
                </value>
                <value>
                    <fullName>1:00 PM PDT</fullName>
                </value>
                <value>
                    <fullName>1:30 PM PDT</fullName>
                </value>
                <value>
                    <fullName>2:00 PM PDT</fullName>
                </value>
                <value>
                    <fullName>2:30 PM PDT</fullName>
                </value>
                <value>
                    <fullName>3:00 PM PDT</fullName>
                </value>
                <value>
                    <fullName>3:30 PM PDT</fullName>
                </value>
                <value>
                    <fullName>4:00 PM PDT</fullName>
                </value>
                <value>
                    <fullName>4:30 PM PDT</fullName>
                </value>
                <value>
                    <fullName>5:00 PM PDT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_for_Approval__c</fullName>
        <description>Indicates the date the request was submitted for approval</description>
        <label>Date Submitted for Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dietary_Restriction_Details__c</fullName>
        <label>Dietary Restriction Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dietary_Restrictions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box if anyone in the party has dietary restrictions</inlineHelpText>
        <label>Dietary Restrictions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Earliest_Date_of_Visit_Day_of_Week__c</fullName>
        <description>Calculates the Day of the Week of the Earliest Date of Visit</description>
        <formula>CASE( MOD(  Earliest_Date_of_Visit__c  - DATE(1900, 1, 7), 7),0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3, &quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;, &quot;Unknown&quot;)</formula>
        <inlineHelpText>Calculates the Day of the Week of the Earliest Date of Visit</inlineHelpText>
        <label>Earliest Date of Visit Day of Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Earliest_Date_of_Visit__c</fullName>
        <inlineHelpText>Enter the earliest date the guest is available for a visit.</inlineHelpText>
        <label>Earliest Date of Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Earliest_Start_Time__c</fullName>
        <inlineHelpText>Enter the earliest time the guest could arrive for the visit.</inlineHelpText>
        <label>Earliest Start Time</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10:00 AM PDT</fullName>
                </value>
                <value>
                    <fullName>10:30 AM PDT</fullName>
                </value>
                <value>
                    <fullName>11:00 AM PDT</fullName>
                </value>
                <value>
                    <fullName>11:30 AM PDT</fullName>
                </value>
                <value>
                    <fullName>12:00 PM PDT</fullName>
                </value>
                <value>
                    <fullName>12:30 PM PDT</fullName>
                </value>
                <value>
                    <fullName>1:00 PM PDT</fullName>
                </value>
                <value>
                    <fullName>1:30 PM PDT</fullName>
                </value>
                <value>
                    <fullName>2:00 PM PDT</fullName>
                </value>
                <value>
                    <fullName>2:30 PM PDT</fullName>
                </value>
                <value>
                    <fullName>3:00 PM PDT</fullName>
                </value>
                <value>
                    <fullName>3:30 PM PDT</fullName>
                </value>
                <value>
                    <fullName>4:00 PM PDT</fullName>
                </value>
                <value>
                    <fullName>4:30 PM PDT</fullName>
                    <isActive>false</isActive>
                    <label>4:30 PM PDT</label>
                </value>
                <value>
                    <fullName>5:00 PM PDT</fullName>
                    <isActive>false</isActive>
                    <label>5:00 PM PDT</label>
                </value>
                <value>
                    <fullName>8:00 AM PDT</fullName>
                    <isActive>false</isActive>
                    <label>8:00 AM PDT</label>
                </value>
                <value>
                    <fullName>8:30 AM PDT</fullName>
                    <isActive>false</isActive>
                    <label>8:30 AM PDT</label>
                </value>
                <value>
                    <fullName>9:00 AM PDT</fullName>
                    <isActive>false</isActive>
                    <label>9:00 AM PDT</label>
                </value>
                <value>
                    <fullName>9:30 AM PDT</fullName>
                    <isActive>false</isActive>
                    <label>9:30 AM PDT</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check  box if this is the first visit to this winery</inlineHelpText>
        <label>First Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Guest_Notes__c</fullName>
        <formula>Tour_and_Tasting__r.Guest_Notes__c</formula>
        <label>Guest Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Itinerary_Recipient_Email__c</fullName>
        <label>Itinerary Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Latest_Date_of_Visit__c</fullName>
        <inlineHelpText>Latest date the guest is available for a visit.</inlineHelpText>
        <label>Latest Date of Visit</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Start_Time__c</fullName>
        <inlineHelpText>Enter the latest that the guest can start the visit.</inlineHelpText>
        <label>Latest Start Time</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10:00 AM PDT</fullName>
                </value>
                <value>
                    <fullName>10:30 AM PDT</fullName>
                </value>
                <value>
                    <fullName>11:00 AM PDT</fullName>
                </value>
                <value>
                    <fullName>11:30 AM PDT</fullName>
                </value>
                <value>
                    <fullName>12:00 PM PDT</fullName>
                </value>
                <value>
                    <fullName>12:30 PM PDT</fullName>
                </value>
                <value>
                    <fullName>1:00 PM PDT</fullName>
                </value>
                <value>
                    <fullName>1:30 PM PDT</fullName>
                </value>
                <value>
                    <fullName>2:00 PM PDT</fullName>
                </value>
                <value>
                    <fullName>2:30 PM PDT</fullName>
                </value>
                <value>
                    <fullName>3:00 PM PDT</fullName>
                </value>
                <value>
                    <fullName>3:30 PM PDT</fullName>
                </value>
                <value>
                    <fullName>4:00 PM PDT</fullName>
                </value>
                <value>
                    <fullName>4:30 PM PDT</fullName>
                    <isActive>false</isActive>
                    <label>4:30 PM PDT</label>
                </value>
                <value>
                    <fullName>5:00 PM PDT</fullName>
                    <isActive>false</isActive>
                    <label>5:00 PM PDT</label>
                </value>
                <value>
                    <fullName>8:00 AM PDT</fullName>
                    <isActive>false</isActive>
                    <label>8:00 AM PDT</label>
                </value>
                <value>
                    <fullName>8:30 AM PDT</fullName>
                    <isActive>false</isActive>
                    <label>8:30 AM PDT</label>
                </value>
                <value>
                    <fullName>9:00 AM PDT</fullName>
                    <isActive>false</isActive>
                    <label>9:00 AM PDT</label>
                </value>
                <value>
                    <fullName>9:30 AM PDT</fullName>
                    <isActive>false</isActive>
                    <label>9:30 AM PDT</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lodging_Approval_Status__c</fullName>
        <label>Lodging Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lodging_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lodging Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lodging_Request_Text__c</fullName>
        <formula>IF(Lodging_Request__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lodging Request Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lodging_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Available at Markham Only!</inlineHelpText>
        <label>Lodging Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lunch_Cost__c</fullName>
        <description>The wineries will enter the approximate or actual cost of the lunch to be provided. This cost will be billed back to the billing code on the request.</description>
        <inlineHelpText>For winery entry only: The wineries will enter the cost of the lunch to be provided. This cost will be billed back to the billing code on the request.</inlineHelpText>
        <label>Lunch Cost</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lunch_Request_Details__c</fullName>
        <label>Lunch Request Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lunch_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lunch Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lunch_Type__c</fullName>
        <label>Lunch Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lunch_Request__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Boxed (RHL Only)</fullName>
                </value>
                <value>
                    <fullName>Plattered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Guests__c</fullName>
        <description>The total number of guests attending.</description>
        <formula>Tour_and_Tasting__r.Number_of_Guests__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total number of guests attending.</inlineHelpText>
        <label>Number of Guests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Nights__c</fullName>
        <formula>Check_out_Date__c - Check_in_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Nights</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Itinerary_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Original Itinerary Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Guest_Mobile_Phone__c</fullName>
        <formula>Tour_and_Tasting__r.Primary_Guest_Name__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Guest Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Guest_Name__c</fullName>
        <formula>Tour_and_Tasting__r.Primary_Guest_Name__r.FirstName &amp; &apos; &apos; &amp; Tour_and_Tasting__r.Primary_Guest_Name__r.LastName</formula>
        <label>Primary Guest Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Guest_Type__c</fullName>
        <formula>TEXT( Tour_and_Tasting__r.Request_Type__c )</formula>
        <label>Primary Guest Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Owner__c</fullName>
        <formula>IF( ISBLANK( Tour_and_Tasting__r.Owner:User.Id ), Tour_and_Tasting__r.Owner:Queue.Name, Tour_and_Tasting__r.Owner:User.FirstName &amp; &apos; &apos; &amp; Tour_and_Tasting__r.Owner:User.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <inlineHelpText>Please select a WINERY first! Then chose your Request Type for the event you wish to set up for your guest.</inlineHelpText>
        <label>xx_Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>T_T_Request_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Type_text__c</fullName>
        <label>Request Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resend_Itinerary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resend Itinerary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Results__c</fullName>
        <inlineHelpText>Enter results of visit to this winery</inlineHelpText>
        <label>Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Send_Itinerary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send an Itinerary to the contact related to this request.</description>
        <inlineHelpText>Send an Itinerary to the contact related to this request.</inlineHelpText>
        <label>Send Itinerary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specify_Lodging_Dates__c</fullName>
        <label>Specify Lodging Dates</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_T_Form_Submission_Date__c</fullName>
        <formula>Tour_and_Tasting__r.Submission_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T&amp;T Form Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tasting_Cost__c</fullName>
        <description>The wineries can determine the approximate or true cost of the tasting and or tour.</description>
        <inlineHelpText>For winery entry only: The wineries will determine the cost of the tasting and or tour.</inlineHelpText>
        <label>Tasting Cost</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tour_and_Tasting__c</fullName>
        <label>Tour and Tasting</label>
        <referenceTo>Tours_and_Tastings__c</referenceTo>
        <relationshipLabel>Tour and Tasting Requests</relationshipLabel>
        <relationshipName>Tour_and_Tasting_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Visit_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box when a tour has been completed and enter visit results below</inlineHelpText>
        <label>Visit Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Winery_Name__c</fullName>
        <formula>Winery__r.Name</formula>
        <label>Winery Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Winery__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Winery</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can only select Winery Accounts</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Winery Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tour and Tasting Requests</relationshipLabel>
        <relationshipName>Tour_and_Tasting_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xx_Number_of_Nights__c</fullName>
        <label>xx_Number of Nights</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Tour and Tasting Request</label>
    <nameField>
        <displayFormat>TTR-{0}</displayFormat>
        <label>Tour and Tasting Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tour and Tasting Requests</pluralLabel>
    <recordTypes>
        <fullName>Tour_Tasting_Request_Sales</fullName>
        <active>true</active>
        <description>Used to create new tour and tasting requests for sales</description>
        <label>Tour and Tasting Request - Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tour_and_Tasting_Request_Approver</fullName>
        <active>true</active>
        <description>Used for Tour and Tasting Approvers</description>
        <label>Tour and Tasting Request - Approver</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CheckRequestDates</fullName>
        <active>true</active>
        <description>Check that selected latest request date is &gt;=  the earliest request date</description>
        <errorConditionFormula>Earliest_Date_of_Visit__c  &gt; Latest_Date_of_Visit__c</errorConditionFormula>
        <errorMessage>Earliest Date of Visit must be before or equal to Latest Date of Visit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Chimney_Rock_No_Weekend_Reservations</fullName>
        <active>false</active>
        <errorConditionFormula>AND(

(Winery_Name__c = &quot;Chimney Rock&quot;),
OR( (Earliest_Date_of_Visit_Day_of_Week__c = &quot;Saturday&quot;),
(Earliest_Date_of_Visit_Day_of_Week__c = &quot;Sunday&quot;) )

)

&amp;&amp; not($Permission.Chimney_Rock_Weekend_Override)</errorConditionFormula>
        <errorMessage>Please ensure all Chimney Rock Reservations are during the work week</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Confirmed_DateTime_Before_Approval</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  OR( ISBLANK(TEXT(Confirmed_Date_of_Visit__c)),
      ISBLANK(TEXT(Confirmed_Time_of_Visit__c ))),
  ISPICKVAL( Approval_Status__c, &quot;Approved&quot;))</errorConditionFormula>
        <errorMessage>Please populate Confirmed Date of Visit and Confirmed Time of Visit before Approving</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequestLeadTime</fullName>
        <active>false</active>
        <description>Checks the a tour and tasting earliest request is 7 days from the date of request</description>
        <errorConditionFormula>(Earliest_Date_of_Visit__c ) &lt;=  DATEVALUE(now()) + 7

&amp;&amp; not($Permission.Lead_Time_Override)</errorConditionFormula>
        <errorMessage>Tour and Tasting requests must be made 7 days in advance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequestType_must_be_filled</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(Request_Type_text__c)</errorConditionFormula>
        <errorMessage>Please populate Request Type field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rochioli_Winery_Start_Time</fullName>
        <active>false</active>
        <errorConditionFormula>AND((Winery_Name__c = &quot;Chimney Rock&quot;),(Earliest_Date_of_Visit__c == DATE(2019,12, 25)))</errorConditionFormula>
        <errorMessage>Closed on Christmas</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rutherford_Hill_Winery_Available_Mon_Fri</fullName>
        <active>false</active>
        <errorConditionFormula>OR(AND(
(Winery_Name__c = &quot;Rutherford Hill Winery&quot;),
OR( (Earliest_Date_of_Visit_Day_of_Week__c= &quot;Saturday&quot;),
(Earliest_Date_of_Visit_Day_of_Week__c= &quot;Sunday&quot;) )
), AND(
(Winery_Name__c = &quot;Rutherford Hill Winery&quot;),
OR( (Earliest_Date_of_Visit_Day_of_Week__c!= &quot;Saturday&quot;),
(Earliest_Date_of_Visit_Day_of_Week__c!= &quot;Sunday&quot;) ), ISPICKVAL(Latest_Start_Time__c, &apos;4:00 PM PDT&apos;)
))</errorConditionFormula>
        <errorMessage>Private Tours &amp; Tasting are available M-F (last appointment at 3:30pm)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateConfirmedTastingDate</fullName>
        <active>true</active>
        <description>Validates that the tasting is confirmed within the date range.</description>
        <errorConditionFormula>Earliest_Date_of_Visit__c &gt; Confirmed_Date_of_Visit__c 
|| 
Confirmed_Date_of_Visit__c &gt; Latest_Date_of_Visit__c</errorConditionFormula>
        <errorMessage>Confirmed Tasting date cannot be outside of requested date range.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Winery_No_Food_Available</fullName>
        <active>true</active>
        <description>Based on checkbox on Account</description>
        <errorConditionFormula>AND( 

( Lunch_Request__c = TRUE), 

( Winery__r.Food_Available__c = FALSE) 
)</errorConditionFormula>
        <errorMessage>This Winery cannot accommodate Lunch Requests</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Winery_No_Lodging</fullName>
        <active>true</active>
        <description>Based on checkbox on Account</description>
        <errorConditionFormula>AND( 

(Lodging_Request__c = TRUE), 

(Winery__r.Lodging_Available__c = FALSE) 
)</errorConditionFormula>
        <errorMessage>This Winery cannot accommodate Lodging Requests</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Winery_No_Private_Tour</fullName>
        <active>true</active>
        <description>Based on checkbox on Account</description>
        <errorConditionFormula>AND( 


ISPICKVAL(Request_Type__c, &quot;Tour&quot;), 
(Winery__r.Private_Tours__c = FALSE) 

)</errorConditionFormula>
        <errorMessage>This Winery cannot accommodate Private Tours</errorMessage>
    </validationRules>
</CustomObject>